# Parashu

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
example/: CMakeLists.txt  videoStitch.cpp
include/: CMakeLists.txt
include/parashu/: frameselector.hpp
src/: CMakeLists.txt  frameselector.cpp
